# ai-readme-generator

./: .gitignore  CLAUDE.md  README.md  review-finding.json
ai-readme-gen/: .gitignore  README.md  pyproject.toml
ai-readme-gen/cli/: __init__.py  main.py
ai-readme-gen/cli/ai/: client.py  prompts.py
ai-readme-gen/cli/analysis/: __init__.py  agent.py  codebase.py  extractor.py  parser.py
ai-readme-gen/cli/commands/: analyze.py  config.py  generate.py
ai-readme-gen/docs/brainstorms/: requirements_ai_readme_generator.md
ai-readme-gen/docs/plans/: 2026-04-11-001-fix-codebase-review-findings-plan.md  ai-readme-generator-cli-plan.md  ai-readme-generator-plan.md
ai-readme-gen/docs/solutions/development-workflow/: phase4-codebase-review-fixes-2026-04-12.md
ai-readme-gen/docs/solutions/python/: agent-propagate-method-warnings-2026-04-11.md  code-review-verified-fixes-2026-04-12.md  duplicate-imports-and-return-type-fix-2026-04-15.md  duplicate-imports-and-return-type-fix-bug-track.md  error-handling-and-defensive-programming-2026-04-14.md  function-signature-mismatch-fix-2026-04-13.md  missing-agentresult-import-2026-04-11.md  (+1 more)
ai-readme-gen/tests/: test_analysis_generator.py  test_analysis_parser.py  test_analysis_pipeline_integration.py  test_api_endpoints_and_setup.py  test_codebase_analysis.py  test_codebase_analysis_extended.py  test_codebase_scanning.py  test_dependencies_extraction.py  test_dependency_extraction.py  test_error_logging.py  test_file_parsing.py  test_malformed_configs.py  test_metadata_extraction.py  test_prompts_and_client.py
ai-readme-gen/web/: .env.example  jest.config.js  package-lock.json  package.json
ai-readme-gen/web/docs/: CHANGES.md  SETUP.md
ai-readme-gen/web/lib/: auth.ts  password.ts  protected-route.ts
ai-readme-gen/web/prisma/: schema.prisma  seed.ts
ai-readme-gen/web/src/: middleware.ts
ai-readme-gen/web/tests/: api-keys.test.ts  api.test.ts  auth.test.ts  projects.test.ts  settings.test.ts  setup.ts
(+36 files in other folders)
